--- a/styles.css
+++ b/styles.css
@@ -64,7 +64,8 @@ h1 {
     background: white;
     width: 330px;
     border-radius: 15px;
-    padding: 30px 0;
+    padding: 30px 40px;
+    text-align: center;
 }
 
 #trackInfo div {
@@ -86,4 +87,9 @@ h1 {
     margin: 15px 0 30px 0;
     font-weight: 500;
     font-size: 20px;
+}
+
+#map { 
+    width: 100%;
+    height: 530px; 
 }
