--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,8 @@
 body {
     font-family: 'Rubik', sans-serif;
     font-size: var(--bodyFont);
-    background: url('images/pattern-bg.png') no-repeat;
+    background: url('images/pattern-bg.png')no-repeat;
+    background-size: auto 250px;
     width: 100%;
 }
 
@@ -21,6 +22,8 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    position:relative;
+    z-index: 2;
 }
 
 h1 {
@@ -32,6 +35,12 @@ h1 {
 
 .infoTitle {
     font-size: .875rem;
+}
+
+main{
+    display: flex;
+    flex-direction: column;
+    place-items: center;
 }
 
 #searchBar {
@@ -61,11 +70,37 @@ h1 {
 }
 
 #trackInfo {
+    display: flex;
+    flex-direction: column;
     background: white;
-    width: 330px;
     border-radius: 15px;
-    padding: 30px 40px;
+    padding: 2rem;
     text-align: center;
+    position: relative;
+    box-shadow: 0 5px 30px -10px rgba(150,170,180,0.5);
+}
+
+@media (min-width: 60rem) {
+    #trackInfo {
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+    }
+
+    #trackInfo > * {
+        padding-right: 2rem;
+    }
+
+    #trackInfo > *:not(:nth-child(1)) {
+        padding-left: 2rem;
+    }
+
+    #trackInfo > *:not(:last-child) {
+        border-right: 1px solid hsla(0, 0%, 0%, .15);
+    }
+
+        
+
 }
 
 #trackInfo div {
@@ -84,12 +119,16 @@ h1 {
 
 .data {
     display: block;
-    margin: 15px 0 30px 0;
+    margin: 15px 0 0 0;
     font-weight: 500;
     font-size: 20px;
 }
 
 #map { 
     width: 100%;
-    height: 530px; 
+    height: 550px;
+    position: fixed;
+    top: 250px;
+    z-index: 1;
 }
+
