--- a/styles.css
+++ b/styles.css
@@ -128,7 +128,7 @@ main{
 
 #map { 
     width: 100%;
-    height: 550px;
+    height: 80vh;
     position: fixed;
     top: 250px;
     z-index: 1;
